# speechcraft

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  repomix-qc.config.json  synopsis.md
backend/: .env.compare  pyproject.toml
backend/app/: canonical_export.py  clip_lab_audio.py  clip_lab_audio_ops.py  clip_lab_state.py  dataset_qc.py  dataset_runs.py  dataset_worker_client.py  defaults.py  main.py  models.py  native_cliplab.py  reference_acoustic_signature.py  reference_clip_candidates.py  reference_cutpoint_assembly.py  repository.py  slicer_algo.py  slicer_core.py  worker.py
backend/scripts/: align_existing_segments.py  delete_temp_batch.py  eval_reference_space.py  eval_safe_gaps.py  evaluate_slicer_algo.py  import_provisional_slicer_batch.py  quick_export_temp_batch.py  reference_probe_set_v1.json  run_folder_asr_align.py  smoke_backend.py
backend/tests/: __init__.py  http_support.py  test_api_integration.py  test_api_requests.py  test_clip_lab_audio.py  test_clip_lab_audio_ops.py  test_clip_lab_lock_cross_process.py  test_clip_lab_routes.py  test_clip_lab_state.py  test_cors_config.py  test_dataset_qc.py  test_dataset_run_refresh_state.py  test_dataset_run_routes.py  test_dataset_runs.py  test_dataset_worker_client.py  test_defaults.py  test_media_requests.py  test_media_route.py  test_reference_clip_candidates.py  test_reference_cutpoint_assembly.py  test_reference_cutpoint_candidates.py  test_reference_hdbscan_clustering.py  test_repository_media.py  test_rfc_artifact_spine.py  test_slicer_algo.py  test_slicer_core.py
backend/tests/fixtures/qc/: candidate_review_manifest.json  speaker_purity.json  transcript_qc.json
docs/: Agent_Audio_Data_Setup.md  Audio-Labeling-WebUI-Design-2026-03-01.md  Feature_Parity_Checklist.md  (+20 more)
workers/aligner/: pyproject.toml  run_aligner.py
workers/dataset/: README.md  pyproject.toml
workers/dataset/scripts/: eval_non_target_speakers.py  generate_qc_graph_exploration.py  preflight.py
workers/dataset/speechcraft_dataset/: __init__.py  alignment_qc.py  analyze_ctc_transcript_qc.py  analyze_vad_mfa_gaps.py  asr.py  assembly.py  audio.py  buffers.py  channel_resolver.py  clip_lab_coordination.py  ctc_transcript_torture_test.py  diarization.py  eval_non_target_speakers.py  eval_speaker_purity.py  eval_speaker_purity_cocktail_test.py  eval_speaker_purity_torture_battery.py  export.py  generate_qc_scores.py  io.py  mfa.py  models.py  normalization.py  qc_artifacts.py  qc_score_stages.py  rerun_export.py  rerun_slicer.py  run.py  safecut.py  vad.py
workers/dataset/tests/: test_analyze_ctc_transcript_qc.py  test_channel_resolver.py  test_clip_lab_coordination.py  test_ctc_transcript_torture_test.py  test_eval_non_target_speakers.py  test_eval_speaker_purity.py  test_eval_speaker_purity_cocktail_test.py  test_eval_speaker_purity_torture_battery.py  test_greedy_insertion_regression.py  test_mfa_runtime_config.py  test_multifile_diarization.py  test_run_cli.py  test_stop_after_boundaries.py
(+113 files in other folders)
