[project]
name = "speechcraft-backend"
version = "0.1.0"
description = "FastAPI backend for the Speechcraft speech dataset workstation"
requires-python = ">=3.11"
dependencies = [
  "filelock>=3.28.0,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "faster-whisper>=1.1.0,<2.0.0",
  "librosa>=0.11.0,<0.12",
  "numpy>=2.0.0,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "scikit-learn>=1.3,<2.0",
  "sqlmodel>=0.0.24,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
]
